# graphhub

./: .gitignore  README.md  grafico_dinamico.ipynb  main.ipynb  plotly.ipynb  pyproject.toml
graphhub/: Configuracoes_globais.ipynb  Configuracoes_globais.md
graphhub/0_Notebooks_cursos/: matplotlib-tutorial-for-beginners.ipynb
graphhub/bar_chart_race/: bar_chart_race.ipynb  graphhub.py
graphhub/matplotlib/: README.md  README_matplotlib.md  matplotlib.ipynb
graphhub/plotly/: plotly.ipynb
graphhub/seaborn/: README.md  seaborn.ipynb  seaborn_exemplos.ipynb  seaborn_theme.ipynb  sns_barras.md  testes.ipynb
