[tool.poetry]
name = "graphhub"
version = "0.1.0"
description = ""
authors = ["Espedito Ferreira Alves <espeditoalves123@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
bar-chart-race = "^0.1.0"
ffmpeg-python = "^0.2.0"
openpyxl = "^3.1.2"
plotly = "^5.20.0"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
